# fibbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: ci.yml  rust.yml
src/: fib.rs  get_numbers.rs  main.rs  manage_pr.rs
