[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
octocrab = "0.43.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"